@@ -1,3 +1,9 @@
+2010-09-14  Ludovic Marcotte  <lmarcotte@inverse.ca>
+
+	* chrome/content/messenger/startup-overlay.js
+	and chrome/content/messenger/update-dialog.js:
+	Fixed the handling of extensions installation
+
 2010-07-27  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
 	* chrome/content/addressbook/newcard-overlay.js: when the current
